fit example fs to new logging