@@ -4,6 +4,8 @@ import dev.dokan.dokan_java.FileSystemInformation;
 import dev.dokan.dokan_java.constants.dokany.MountOption;
 import dev.dokan.dokan_java.constants.microsoft.FileSystemFlag;
 import dev.dokan.dokan_java.structure.EnumIntegerSet;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.slf4j.impl.SimpleLogger;
 
 import java.io.IOException;
@@ -11,6 +13,8 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 
 public class DirListingFSTest {
+
+    public static final Logger LOG = LoggerFactory.getLogger(DirListingFSTest.class);
 
     static {
         System.setProperty(SimpleLogger.DEFAULT_LOG_LEVEL_KEY, "info");
@@ -22,16 +26,14 @@ public class DirListingFSTest {
     public static void main(String[] args) {
         System.out.println("Starting Dokany MirrorFS");
 
-        Path mountPoint = Paths.get("M:\\mnt\\");
+        Path mountPoint = Path.of("M:\\mnt\\");
         EnumIntegerSet mountOptions = new EnumIntegerSet<>(MountOption.class);
-        mountOptions.add(MountOption.DEBUG_MODE, MountOption.STD_ERR_OUTPUT, MountOption.WRITE_PROTECTION, MountOption.CURRENT_SESSION);
+        mountOptions.add(MountOption.STD_ERR_OUTPUT, MountOption.WRITE_PROTECTION, MountOption.CURRENT_SESSION);
 
         EnumIntegerSet<FileSystemFlag> fsFeatures = new EnumIntegerSet<>(FileSystemFlag.class);
         fsFeatures.add(FileSystemFlag.READ_ONLY_VOLUME, FileSystemFlag.CASE_PRESERVED_NAMES);
         FileSystemInformation fsInfo = new FileSystemInformation(fsFeatures);
-        DirListingFileSystem fs = new DirListingFileSystem(Paths.get("M:\\test"), fsInfo);
-
-        try {
+        try (DirListingFileSystem fs = new DirListingFileSystem(Paths.get("M:\\test"), fsInfo)) {
             fs.mount(mountPoint, mountOptions);
             System.in.read();
         } catch (IOException e) {
